# visual_localization

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
data/map/: map.csv
data/query/: photo_metadata.csv
docs/: conf.py  index.rst  modules.rst  svl.keypoint_pipeline.rst  svl.localization.rst  svl.rst  svl.tms.rst  svl.utils.rst
scripts/: main.py
src/svl/keypoint_pipeline/: base.py  detection_and_description.py  matcher.py  typing.py
src/svl/localization/: base.py  data.py  drone_streamer.py  map_reader.py  pipeline.py  preprocessing.py  tile_pipeline.py
src/svl/tms/: __init__.py  data_structures.py  download.py  geo.py  schemas.py
src/svl/utils/: checks.py  constants.py  errors.py  io.py
tests/: conftest.py
tests/keypoint_pipeline/: test_detection_and_description.py  test_matcher.py
